# adk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test_span_serialization.rs
adk-3d-ui/: Cargo.toml  README.md
adk-3d-ui/src/: executor.rs  lib.rs  main.rs  planner.rs  policy.rs  protocol.rs  server.rs  session.rs
adk-3d-ui/tests/: phase0_contract.rs
adk-3d-ui/ui/: index.html
adk-agent/: Cargo.toml  README.md
adk-agent/examples/: agent_control_demo.rs  state_management_demo.rs
adk-agent/src/: llm_agent.rs  tool_call_markup.rs
adk-agent/tests/: callback_integration_test.rs  callback_integration_tests.rs  context_propagation_test.rs  llm_agent_tests.rs  mcp_integration_test.rs  streaming_test.rs
adk-artifact/: Cargo.toml  README.md
adk-artifact/src/: scoped.rs
adk-auth/: Cargo.toml
adk-auth/src/: lib.rs
adk-browser/: Cargo.toml  README.md
adk-browser/src/: lib.rs
adk-cli/: Cargo.toml  README.md
adk-cli/src/: console.rs  launcher.rs  serve.rs
adk-core/: README.md
adk-core/src/: agent.rs  context.rs  event.rs  lib.rs  model.rs  types.rs
adk-core/tests/: instruction_template_tests.rs
adk-eval/: Cargo.toml
adk-eval/src/: scoring.rs
adk-gemini/: Cargo.toml  README.md
adk-gemini/examples/: advanced.rs  basic_generation.rs  basic_streaming.rs  batch_cancel.rs  batch_delete.rs  batch_embedding.rs  batch_generate.rs  batch_list.rs  blob.rs  cache_basic.rs  complex_function.rs  curl_equivalent.rs  curl_google_search.rs  custom_base_url.rs  custom_models.rs  embedding.rs  error_handling.rs  files_delete_all.rs  files_lifecycle.rs  gemini_pro_example.rs  generation_config.rs  google_search.rs  google_search_with_functions.rs  http_client_builder.rs  image_editing.rs  image_generation.rs  mp4_describe.rs  multi_speaker_tts.rs  simple.rs  simple_image_generation.rs  simple_speech_generation.rs  simple_thought_signature.rs  streaming.rs  structured_response.rs  test_api.rs  text_thought_signature_example.rs  thinking_advanced.rs  thinking_basic.rs  thinking_curl_equivalent.rs  thought_signature_example.rs  (+3 more)
adk-gemini/src/: client.rs  lib.rs  models.rs  response_parsing_tests.rs  tests.rs
adk-graph/: Cargo.toml  README.md
adk-graph/src/: agent.rs  checkpoint.rs  edge.rs  error.rs  executor.rs  graph.rs  interrupt.rs  lib.rs  node.rs  state.rs  stream.rs
adk-graph/tests/: checkpoint_tests.rs  edge_tests.rs  execution_tests.rs  graph_tests.rs  node_tests.rs  state_tests.rs
adk-guardrail/: Cargo.toml  README.md
adk-guardrail/src/: schema.rs
adk-memory/: Cargo.toml  README.md
adk-mistralrs/: Cargo.toml  README.md
adk-mistralrs/src/: client.rs  config.rs  convert.rs  error.rs  lib.rs
adk-mistralrs/tests/: chat_template_tests.rs  config_property_tests.rs  llm_trait_tests.rs  tool_conversion_tests.rs
adk-model/: Cargo.toml  README.md
adk-model/src/: lib.rs
adk-model/tests/: gemini_integration_tests.rs  gemini_tests.rs  google_search_test.rs  streaming_tests.rs
adk-rag/: Cargo.toml  README.md
adk-rag/src/: chunking.rs  config.rs  document.rs  embedding.rs  error.rs  gemini.rs  inmemory.rs  lancedb.rs  lib.rs  openai.rs  pgvector.rs  pipeline.rs  qdrant.rs  reranker.rs  tool.rs  vectorstore.rs
adk-rag/tests/: inmemory_tests.rs
adk-realtime/: Cargo.toml  README.md
adk-realtime/examples/: vertex_live_tools.rs
adk-realtime/src/: agent.rs  audio.rs  lib.rs  model.rs  runner.rs
adk-runner/: Cargo.toml  README.md
adk-runner/src/: context.rs  runner.rs
adk-runner/tests/: runner_tests.rs
adk-rust/: Cargo.toml  README.md
adk-rust/examples/: test_unified.rs
adk-rust/src/: lib.rs
adk-server/: Cargo.toml  README.md
adk-server/src/: config.rs  lib.rs  web_ui.rs
adk-server/tests/: a2a_tests.rs  server_tests.rs  web_ui_test.rs
adk-session/: Cargo.toml  README.md
adk-session/src/: database.rs  inmemory.rs  lib.rs
adk-skill/: Cargo.toml
adk-skill/src/: discovery.rs  index.rs  lib.rs  parser.rs
adk-spatial-os/: Cargo.toml  README.md
adk-spatial-os/src/: lib.rs  main.rs  protocol.rs  server.rs  session.rs
adk-spatial-os/src/app_runtime/: bridge.rs  handoff.rs  host.rs  manifest.rs  mod.rs
adk-spatial-os/src/safety/: approvals.rs  audit.rs  mod.rs  risk.rs
adk-spatial-os/src/shell/: compositor.rs  mod.rs  orchestrator.rs  timeline.rs
adk-spatial-os/tests/: phase1_contract.rs
adk-spatial-os/ui-shell/: index.html
adk-studio/: Cargo.toml  README.md
adk-studio/examples/: codegen_demo.rs
adk-studio/src/: lib.rs  main.rs
adk-studio/tests/: codegen_tests.rs
adk-telemetry/: Cargo.toml  README.md
adk-telemetry/src/: init.rs  lib.rs  memory.rs  span_exporter.rs  test_adk_go_style.rs  test_inmemory.rs  test_serialization.rs
adk-tool/: Cargo.toml  README.md
adk-tool/src/: agent_tool.rs  function_tool.rs  lib.rs
adk-tool/tests/: toolset_tests.rs
adk-ui/: Cargo.toml  README.md
adk-ui/docs/: PROTOCOL_MIGRATION.md
adk-ui/src/: lib.rs  validation.rs
doc-test/quickstart_test/: Cargo.toml
docs/implementation/: openai-provider.md  rmcp-0.13-migration-analysis.md
docs/official_docs/: index.md  introduction.md  quickstart.md
docs/roadmap/: adk-spatial-os-design.md  adk-spatial-os-requirements.md  adk-spatial-os-tasks.md  adk-studio.md  evaluation.md  gemini-pr-integration.md  graph-agent-design.md  langgraph-architecture.md  mcp-tools.md  realtime-streaming.md
examples/: Cargo.toml  README.md
examples/a2a/: main.rs
examples/agent_tool/: main.rs
examples/anthropic_basic/: main.rs
examples/anthropic_tools/: main.rs
examples/auth_sso/: main.rs
examples/docs_translator/: main.rs
examples/eval_agent/: main.rs
examples/eval_llm_openai/: main.rs
examples/function_tool/: main.rs
examples/graph_agent/: main.rs
examples/graph_checkpoint/: main.rs
examples/graph_conditional/: main.rs
examples/graph_hitl/: main.rs
(+167 files in other folders)
