[package]
name = "adk-3d-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Agentic 3D UI runtime for ADK-Rust using SSE + Three.js"
repository = "https://github.com/zavora-ai/adk-rust"
readme = "README.md"
keywords = ["ai", "agent", "3d", "threejs", "sse"]
categories = ["api-bindings", "web-programming::http-server", "gui"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
reqwest.workspace = true
