[package]
name = "adk-graph"
version = "0.1.3"
edition = "2021"
description = "Graph-based workflow orchestration for ADK-Rust agents"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-graph"
readme = "README.md"
keywords = ["ai", "agents", "workflow", "graph", "langgraph"]
categories = ["science", "asynchronous"]

[dependencies]
adk-core = { version = "0.1.3", path = "../adk-core" }

async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"

# Optional SQLite checkpointer
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }

[features]
default = []
sqlite = ["sqlx"]
full = ["sqlite"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
