[package]
name = "adk-spatial-os"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "AI-native spatial operating shell for ADK-Rust agent apps"
repository = "https://github.com/zavora-ai/adk-rust"
readme = "README.md"
keywords = ["ai", "agent", "spatial", "shell", "adk"]
categories = ["api-bindings", "gui", "web-programming::http-server"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
adk-agent.workspace = true
adk-runner.workspace = true
adk-session.workspace = true

[dev-dependencies]
reqwest.workspace = true
